2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwconv.c: Use a bool when possible instead of int integers.
	* src/pwconv.c: Add brackets and parenthesis.
	* src/pwconv.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/pwconv.c: Avoid implicit conversion of pointers / integers /
	chars to booleans.

2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newusers.c: Implement the -r, --system option.
	* src/newusers.c: Use a bool when possible instead of int
	integers.
	* src/newusers.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/newusers.c: Ignore the return value of pam_end() before
	exiting.
	* src/newusers.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/newusers.c: Avoid multi-statements lines.
	* src/newusers.c: Add brackets and parenthesis.

2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Use a bool when possible instead of int integers.
	* src/gpasswd.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/gpasswd.c: Ignore the return value of putchar() and fflush()
	before exiting.
	* src/gpasswd.c: check_list() renamed is_valid_user_list(), and
	return a bool.
	* src/gpasswd.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().

2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpck.c: Use a bool when possible instead of int integers.
	* src/grpck.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().

2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>

	* src/lastlog.c: Use a bool when possible instead of int integers.
	* src/lastlog.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/lastlog.c: Add brackets and parenthesis.
	* src/lastlog.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
