@@ -1,5 +1,14 @@
 2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/chpasswd.c: Use a bool when possible instead of int
+	integers.
+	* src/chpasswd.c: Avoid implicit conversion of pointers / integers
+	/ chars to booleans.
+	* src/chpasswd.c: Ignore return value of setlocale(),
+	bindtextdomain(), and textdomain().
+
+2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/pwconv.c: Use a bool when possible instead of int integers.
 	* src/pwconv.c: Add brackets and parenthesis.
 	* src/pwconv.c: Ignore return value of setlocale(),
